# ChangeLog for www-client/seamonkey
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.101 2007/11/23 17:33:17 armin76 Exp $

  23 Nov 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.6.ebuild:
  Add ~sparc

  12 Nov 2007; Raúl Porcel <armin76@gentoo.org> -seamonkey-1.1.4.ebuild,
  -seamonkey-1.1.5.ebuild:
  old

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> seamonkey-1.1.6.ebuild:
  amd64 stable wrt security #196480

  08 Nov 2007; Jeroen Roovers <jer@gentoo.org> seamonkey-1.1.6.ebuild:
  Stable for HPPA (bug #196480).

  07 Nov 2007; Markus Rothe <corsair@gentoo.org> seamonkey-1.1.6.ebuild:
  Stable on ppc64; bug #196480

  07 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  seamonkey-1.1.6.ebuild:
  ppc stable, bug #196480

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.6.ebuild:
  alpha/ia64/x86 stable wrt security #196480

*seamonkey-1.1.6 (06 Nov 2007)

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> +seamonkey-1.1.6.ebuild:
  Version bump

  23 Oct 2007; Christoph Mende <angelos@gentoo.org> seamonkey-1.1.5.ebuild:
  Stable on amd64 wrt security bug #196480

  23 Oct 2007; Jeroen Roovers <jer@gentoo.org> seamonkey-1.1.5.ebuild:
  Stable for HPPA (bug #196480). Fixed quoting issues.

  23 Oct 2007; Markus Rothe <corsair@gentoo.org> seamonkey-1.1.5.ebuild:
  Stable on ppc64; bug #196480

  22 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  seamonkey-1.1.5.ebuild:
  ppc stable, bug #196480

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.5.ebuild:
  alpha/ia64 stable wrt security #196480

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.5.ebuild:
  Revert fix for bug #186750 as it doesn't affect seamonkey

  21 Oct 2007; Raúl Porcel <armin76@gentoo.org> seamonkey-1.1.5.ebuild:
  Bump patchset to fix bug #196444, bug #188636, and fix bug #186750 thanks to
  Walter Meinl <wuno at lsvw dot de> for the patches
