@@ -19,23 +19,23 @@ MD5 199e59a053b66e9c4d56d9ca1c41d09e files/seamonkey-rebuild-databases.pl 2344
 RMD160 27ae162b4028d80faeb802e575b41590f6ab314e files/seamonkey-rebuild-databases.pl 2344
 SHA256 fde49923b949fc300040490e404a9f65b5777e8e7440fd8f0907d17b041fb2af files/seamonkey-rebuild-databases.pl 2344
 DIST enigmail-0.95.0.tar.gz 568958 RMD160 b9cca2eb05b9c229225d6c7597da7740f47273e5 SHA1 413e30227287ec3f5f00f0589ec7dcdad9ef1c1d SHA256 dc869191953c3d0797f89223a0ad5e8accc009266f1d2ec3adb2f5814ff33b50
-DIST enigmail-0.95.3.tar.gz 1111160 RMD160 fc2d314c34b5e6dba11eb6c9095976bcf23c73f0 SHA1 65a180faec94cb922e1d367d86eea5b23f4b57ab SHA256 6ee00ae7a897eb15836e5c6146d58ec5fae0b6239e3405214d974d4bf072333f
+DIST enigmail-0.95.5.tar.gz 1189374 RMD160 f8ba29265a1fe31fd2d9197148270d7628b58e61 SHA1 983f04b58524228fca31c7f6a0b0f36a69d72559 SHA256 2d3dc9a14aa4976f919a7b8090b86f8362a51bb2fd69967f0aca3b99dfd254ed
 DIST seamonkey-1.1.1-patches-0.2.tar.bz2 20492 RMD160 19bad75df317d33852514ed8e3f4ce3e91e12616 SHA1 e39cc1c8594ccf3c7f6923b3ef9300fc20beff47 SHA256 029edd8170c6c596050c5399d768b1b224e70ddcbe07ecda10d8c8a2b089441a
 DIST seamonkey-1.1.2.source.tar.bz2 35220020 RMD160 aa681ebe1e68ab8fba0d04e3c0c0434b65e6f1ad SHA1 d0aa219b54a54cd75e690a458280b0d12bcf9607 SHA256 2cf313503cf5e66d3da5471b872f086f656409e031b5f57c8b662d23faab1fda
-DIST seamonkey-1.1.5-patches-0.2.tar.bz2 20722 RMD160 e38fb72aba422185ac8f24dcb8ae216e96204502 SHA1 4faeff590f0507803cf31dfd776015884c1c2592 SHA256 18749e7f1878b47dc5e00d5a9b9ecdb5ad7f388f62e35bdb43652126820865d1
+DIST seamonkey-1.1.5-patches-0.3.tar.bz2 20675 RMD160 70b5444a7c6d5ef96842e8500550e9a7f1e842b0 SHA1 63fb53b0a514231299cbd82934b8302c56fd9a52 SHA256 5ffe41cd73a0bdb4e378bc2dc58388281e00ec434dbbabc05af2789df581b9d0
 DIST seamonkey-1.1.6.source.tar.bz2 35420392 RMD160 7965b28b88b56fdcd6fa3bb6ee38bbd240f607c9 SHA1 e37972ab4a30c1f12f1673916b4ab7049bee5fff SHA256 fd6f79394f58dda9820936d623341c99e4db5a1296252576d3fa3f3f35e3356b
 EBUILD seamonkey-1.1.2.ebuild 8634 RMD160 09acfce4f59bd3fa9ae5fe37c3d804af5ff241fb SHA1 65920221d455d0165e4e54867366198a586ba6dd SHA256 f16703d79be156d060795d780019b855b5ffda3fd852db2b0210b3236ec18c5e
 MD5 20937d5874437f1686ae087608ce0dad seamonkey-1.1.2.ebuild 8634
 RMD160 09acfce4f59bd3fa9ae5fe37c3d804af5ff241fb seamonkey-1.1.2.ebuild 8634
 SHA256 f16703d79be156d060795d780019b855b5ffda3fd852db2b0210b3236ec18c5e seamonkey-1.1.2.ebuild 8634
-EBUILD seamonkey-1.1.6.ebuild 8113 RMD160 e7215d5d85e8b50000b708b98a7fb102e723962a SHA1 dda72573844674416c5f980d21fc0ed797b4d507 SHA256 240a7c109be9f0d9b070b5b59bad6718ee86862e0878252f024f56652ff7c8e0
-MD5 d76c516738a84e5619748be111660834 seamonkey-1.1.6.ebuild 8113
-RMD160 e7215d5d85e8b50000b708b98a7fb102e723962a seamonkey-1.1.6.ebuild 8113
-SHA256 240a7c109be9f0d9b070b5b59bad6718ee86862e0878252f024f56652ff7c8e0 seamonkey-1.1.6.ebuild 8113
-MISC ChangeLog 12650 RMD160 9879e6d72d748d06aebfedf16b86d39ef6eb396a SHA1 83435a710c3eae2ba7d5e22592566de7e32a3922 SHA256 81cb505ec0b05ee6d05a3901af48318b14e5d81d55a96bbdb34029c09bbd5b20
-MD5 c18d8f2ca64c24301ef7776fa882e47b ChangeLog 12650
-RMD160 9879e6d72d748d06aebfedf16b86d39ef6eb396a ChangeLog 12650
-SHA256 81cb505ec0b05ee6d05a3901af48318b14e5d81d55a96bbdb34029c09bbd5b20 ChangeLog 12650
+EBUILD seamonkey-1.1.6.ebuild 8113 RMD160 c045fa6736bb169a29ae19a618db678547e31bc1 SHA1 4e2deeeb846d18fe3cc922af51f3b35dfd64fa69 SHA256 7c92f32997134fc9c95c6c73bb78ea0f0a395d6d7051b2a5392555d0b3d55b21
+MD5 c19bf98415d9ccc666fbcf2470fe2c26 seamonkey-1.1.6.ebuild 8113
+RMD160 c045fa6736bb169a29ae19a618db678547e31bc1 seamonkey-1.1.6.ebuild 8113
+SHA256 7c92f32997134fc9c95c6c73bb78ea0f0a395d6d7051b2a5392555d0b3d55b21 seamonkey-1.1.6.ebuild 8113
+MISC ChangeLog 12759 RMD160 1b497bdfd666ec79284b2397fc45f326782b8cbe SHA1 f541631e8ca48846d430434a246a4bde6d157fa5 SHA256 e3cf2171b5df78852522fdadc5b659abf99e6131d073d199bbc4ed6a038f3662
+MD5 e0e296aee813ba02c28dea05cf90e36f ChangeLog 12759
+RMD160 1b497bdfd666ec79284b2397fc45f326782b8cbe ChangeLog 12759
+SHA256 e3cf2171b5df78852522fdadc5b659abf99e6131d073d199bbc4ed6a038f3662 ChangeLog 12759
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
@@ -43,6 +43,6 @@ SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b metadata
 MD5 135001309bfa8f5c310c988e4e57aef3 files/digest-seamonkey-1.1.2 807
 RMD160 bf491685e0bedd2e0fcac53c9e4148c700d75e82 files/digest-seamonkey-1.1.2 807
 SHA256 1153c70202a308c807136f94dc731d4329fba612839ecdb2abcf7aefacb6781c files/digest-seamonkey-1.1.2 807
-MD5 71f39c4efd4d9a338186d90292034153 files/digest-seamonkey-1.1.6 810
-RMD160 cbec1327d66735db7fdc1cd24eb9a91785c78027 files/digest-seamonkey-1.1.6 810
-SHA256 c54edeea81907281f5c54a648c7c1c8cce85a900b58da0795c343ead54fbe672 files/digest-seamonkey-1.1.6 810
+MD5 906ca205620e9db5cc18d1602299ecf8 files/digest-seamonkey-1.1.6 810
+RMD160 aa6ec626a519e4a80c47408a62a891655a3a67c4 files/digest-seamonkey-1.1.6 810
+SHA256 ac506e20da2f7f5485c391ce0a5fb0b3ba1f57cdd297e1397718b022041f4e46 files/digest-seamonkey-1.1.6 810
