@@ -1,9 +1,9 @@
-MD5 47e3c376a681bdee3958295d31ff471c enigmail-0.95.3.tar.gz 1111160
-RMD160 fc2d314c34b5e6dba11eb6c9095976bcf23c73f0 enigmail-0.95.3.tar.gz 1111160
-SHA256 6ee00ae7a897eb15836e5c6146d58ec5fae0b6239e3405214d974d4bf072333f enigmail-0.95.3.tar.gz 1111160
-MD5 8e7e969a920a3ae87de8c2acd0cc919d seamonkey-1.1.5-patches-0.2.tar.bz2 20722
-RMD160 e38fb72aba422185ac8f24dcb8ae216e96204502 seamonkey-1.1.5-patches-0.2.tar.bz2 20722
-SHA256 18749e7f1878b47dc5e00d5a9b9ecdb5ad7f388f62e35bdb43652126820865d1 seamonkey-1.1.5-patches-0.2.tar.bz2 20722
+MD5 18b45ff84edbea05acd5756fc63e9ba0 enigmail-0.95.5.tar.gz 1189374
+RMD160 f8ba29265a1fe31fd2d9197148270d7628b58e61 enigmail-0.95.5.tar.gz 1189374
+SHA256 2d3dc9a14aa4976f919a7b8090b86f8362a51bb2fd69967f0aca3b99dfd254ed enigmail-0.95.5.tar.gz 1189374
+MD5 d95d4515f527454ac7b084e566b6f6ff seamonkey-1.1.5-patches-0.3.tar.bz2 20675
+RMD160 70b5444a7c6d5ef96842e8500550e9a7f1e842b0 seamonkey-1.1.5-patches-0.3.tar.bz2 20675
+SHA256 5ffe41cd73a0bdb4e378bc2dc58388281e00ec434dbbabc05af2789df581b9d0 seamonkey-1.1.5-patches-0.3.tar.bz2 20675
 MD5 bd3f4d3232a1c936a20fd76785f3e395 seamonkey-1.1.6.source.tar.bz2 35420392
 RMD160 7965b28b88b56fdcd6fa3bb6ee38bbd240f607c9 seamonkey-1.1.6.source.tar.bz2 35420392
 SHA256 fd6f79394f58dda9820936d623341c99e4db5a1296252576d3fa3f3f35e3356b seamonkey-1.1.6.source.tar.bz2 35420392
